--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
           var editor = monaco.editor.create(document.getElementById("editor"), {
             value: `public class Main{
    static void printMCP1() {
-       System.out.println("\t\t\t\t----> MCP - 1 <-----");
+       System.out.println("				----> MCP - 1 <-----");
        System.out.println("*****************************************************************************");
        frontEnd();
        java();
@@ -415,7 +415,7 @@
        softskills();
    }
    static void printMCP2() {
-       System.out.println("\t\t\t\t----> MCP - 2 <-----");
+       System.out.println("				----> MCP - 2 <-----");
        System.out.println("*****************************************************************************");
        mTest();
        aTest();
@@ -432,46 +432,46 @@
                "Java Frameworks(Module 4)" };
        System.out.println("->Java :");
        for (String s1 : jc) {
-           System.out.println("\t" + s1);
+           System.out.println("	" + s1);
        }
-       System.out.println("->IDEs : \n\tEclipse\n\tIntelliJ\n\tVSCode");
-       System.out.println("->Build Tool : \n\tMaven");
-       System.out.println("->Version Control : \n\tgit");
+       System.out.println("->IDEs : Eclipse IntelliJ VSCode");
+       System.out.println("->Build Tool : Maven");
+       System.out.println("->Version Control : git");
    }
    static void python() {
        String[] py = { "Core Python", "Adv. Python", "Django Framework" };
        System.out.println("->Python : ");
        for (String s1 : py) {
-           System.out.println("\t" + s1);
+           System.out.println("	" + s1);
        }
    }
    static void mTest() {
        System.out.println("->Manual Testing");
    }
    static void aTest() {
-       System.out.println("\n->Automation Testing \n\tSelenium");
+       System.out.println("->Automation Testing Selenium");
    }
    static void frontEnd() {
        String[] fe = { "HTML5", "CSS3", "JavaScript", "React" };
        System.out.println("->Front End : ");
        for (String s1 : fe) {
-           System.out.println("\t" + s1);
+           System.out.println("	" + s1);
        }
    }
    static void database() {
-       System.out.println("->Database : \n\tOracle\n\tMySQL\n\tMongoDB");
+       System.out.println("->Database : Oracle MySQL MongoDB");
    }
    static void aptitude() {
-       System.out.println("->Aptitude : \n\tMathematical\n\tReasoning");
+       System.out.println("->Aptitude : Mathematical Reasoning");
    }
    static void softskills() {
-       System.out.println("->Softskills : \n\tResume Building\n\tCommunication\n\tHR");
+       System.out.println("->Softskills : Resume Building Communication HR");
    }
    static void programming() {
-       System.out.println("->Programming : \n\tHackathon");
+       System.out.println("->Programming : Hackathon");
    }
    static void dsa() {
-       System.out.println("->Data Structures & Algorithms : \n\tLinear & non-Linear\n\tAnalysis of Algorithm");
+       System.out.println("->Data Structures & Algorithms : Linear & non-Linear Analysis of Algorithm");
    }
    public static void main(String[] args) {
        printMCP1();
